# academic-research

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
skills/academic-research/: SKILL.md
skills/academic-research/references/: peer-review-guide.md  search-sources.md
skills/academic-research/scripts/: _bootstrap.py  download.py  paper.py  parse_pdf.py  pyproject.toml  requirements.txt  search.py
tests/: conftest.py  test_download.py  test_parse_pdf.py  test_real_paper.py  test_search.py
tools/: sync_requirements.py
