[project]
name = "academic-research"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28",
    "pypdf>=5.0",
    "pdfplumber>=0.11",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.15.0",
    "ty>=0.0.1",
    "reportlab>=4.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
per-file-ignores = { "**/search.py" = ["E402"], "**/parse_pdf.py" = ["E402"], "**/download.py" = ["E402"] }
