[project]
name = "academic-research-scripts"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "pypdf>=5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
per-file-ignores = { "**/search.py" = ["E402"], "**/parse_pdf.py" = ["E402"] }
